# fictionpub

./: .gitignore  LICENSE  README.md  build.py  build_exe.py  fictionpub.spec  makefile  nuitka.ini  pyproject.toml  run_app.py  run_app_cli.py  run_app_gui.py
fictionpub/: cli.py  gui.py  main.py  pyproject.toml
fictionpub/core/: batch_processor.py  epub_builder.py  fb2_book.py  fb2_to_html_converter.py  pipeline.py  post_processor.py  typography.py
fictionpub/css/: default.css
fictionpub/post_processing/: post_processor.py
fictionpub/resources/: loader.py  loader_gui.py
fictionpub/resources/css/: default.css
fictionpub/terms/: genres.json  headings.json  localized_terms.py
fictionpub/utils/: config.py  logger.py  namespaces.py  opf_utils.py  structures.py  xml_utils.py
