[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fictionpub"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "fictionpub"
description = "Convert FB2 eBooks to EPUB3."
authors = [{ name = "TinyRaindrop" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["fb2", "epub", "ebook", "converter"]

[project.urls]
Homepage = "https://github.com/TinyRaindrop/fictionpub"
Issues = "https://github.com/TinyRaindrop/fictionpub/issues"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "lxml>=5.2.0",
    "pillow>=11.0.0",
    "tkinterdnd2>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "lxml-stubs>=0.5.0",
    "setuptools_scm">="9.0.0",
    "nuitka>=2.8.8"
]

# When a user types "fictionpub", it will run main() from fictionpub/main.py
[project.scripts]
fictionpub = "fictionpub.main:main"


