[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fictionpub"
description = "Convert FB2 eBooks to EPUB3."
authors = [{ name = "TinyRaindrop" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["fb2", "epub", "ebook", "converter"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "lxml>=5.2.0",
    "pillow>=11.0.0",
    "tkinterdnd2>=0.4.3",
]

[project.optional-dependencies]
dev = [
    # lxml support for Pylance
    "lxml-stubs>=0.5.0",

    # Formatting and linting
    "ruff>=0.7.0",

    # Type checking
    "mypy>=1.11.0",

    # Testing
    # "pytest>=8.3.0",
    # "pytest-cov>=5.0.0",

    # Build / packaging validation
    "nuitka>=2.8.8",
    "setuptools_scm>=9.0.0",
    "build>=1.2.2",
    # "twine>=5.0.0",
]

[tool.setuptools]
packages = ["fictionpub"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
exclude = '(dist|build)/'

[project.urls]
Homepage = "https://github.com/TinyRaindrop/fictionpub"
Issues = "https://github.com/TinyRaindrop/fictionpub/issues"

# When a user types "fictionpub", it will run main() from fictionpub/main.py
[project.scripts]
fictionpub = "fictionpub.main:main"


